[package]
name = "devworkbench"
version = "0.1.0"
description = "A DevUtils/DevToys-like developer toolbox application - DevWorkbench"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.6", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["oid"] }
sha3 = "0.10"
md2 = "0.10"
md4 = "0.10"
md5 = "0.7"
sha1 = "0.10"
hex = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
